--- a/.github/workflows/issue-notifier.yml
+++ b/.github/workflows/issue-notifier.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Get Issue Details
         id: get_issue
         uses: actions/github-script@v3
-        with:
+        with: 
           script: |
             const issue_url = '${{ steps.extract_payload.outputs.issue_url }}';
             const issue_number = issue_url.split('/').pop();
@@ -38,6 +38,8 @@ jobs:
             return { body: body };
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Output Issue Body
         run: |
           echo "Issue body: ${{ steps.get_issue.outputs.body }}"
           echo "::set-output name=issue_body::${{ steps.get_issue.outputs.body }}"
