--- a/.github/workflows/issue-notifier.yml
+++ b/.github/workflows/issue-notifier.yml
@@ -1,3 +1,4 @@
+
 name: Notify Owner
 
 on:
@@ -18,16 +19,18 @@ jobs:
         run: |
           echo "Event payload: ${{ toJson(github.event.client_payload) }}"
           issue_url="${{ github.event.client_payload.issue_url }}"
+          issue_number=$(echo $issue_url | awk -F'/' '{print $NF}')
           echo "Issue URL: $issue_url"
+          echo "Issue Number: $issue_number"
           echo "::set-output name=issue_url::$issue_url"
+          echo "::set-output name=issue_number::$issue_number"
 
       - name: Get Issue Details
         id: get_issue
         uses: actions/github-script@v3
-        with: 
+        with:
           script: |
-            const issue_url = '${{ steps.extract_payload.outputs.issue_url }}';
-            const issue_number = issue_url.split('/').pop();
+            const issue_number = '${{ steps.extract_payload.outputs.issue_number }}';
             const response = await github.issues.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -38,8 +41,6 @@ jobs:
             return { body: body };
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Output Issue Body
         run: |
           echo "Issue body: ${{ steps.get_issue.outputs.body }}"
           echo "::set-output name=issue_body::${{ steps.get_issue.outputs.body }}"
@@ -71,7 +72,7 @@ jobs:
       - name: Comment on the issue
         uses: peter-evans/create-or-update-comment@v1
         with:
-          issue-url: ${{ steps.extract_payload.outputs.issue_url }}
+          issue-number: ${{ steps.extract_payload.outputs.issue_number }}
           body: |
             @${{ steps.extract_details.outputs.owner }} A new issue has been created with the following details:
             - **Policy**: ${{ steps.extract_details.outputs.policy }}
