--- a/.github/workflows/issue-notifier.yml
+++ b/.github/workflows/issue-notifier.yml
@@ -18,41 +18,39 @@ jobs:
         run: |
           echo "Event payload: ${{ toJson(github.event.client_payload) }}"
           issue_url="${{ github.event.client_payload.issue_url }}"
-          issue_number=$(echo $issue_url | awk -F'/' '{print $NF}')
           echo "Issue URL: $issue_url"
-          echo "Issue Number: $issue_number"
           echo "::set-output name=issue_url::$issue_url"
-          echo "::set-output name=issue_number::$issue_number"
 
       - name: Get Issue Details
         id: get_issue
         uses: actions/github-script@v3
         with:
           script: |
-            const issue_number = '${{ steps.extract_payload.outputs.issue_number }}';
+            const issue_url = '${{ steps.extract_payload.outputs.issue_url }}';
+            const issue_number = issue_url.split('/').pop();
             const response = await github.issues.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: issue_number
             });
-            console.log(response.data);
-            return response.data.body;
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install jq
-        run: sudo apt-get install -y jq
+            return response.data;
+        outputs:
+          issue_body: ${{ steps.get_issue.outputs.body }}
 
       - name: Extract issue details
         id: extract_details
         run: |
-          issue_body="${{ steps.get_issue.outputs.result }}"
+          issue_body="${{ steps.get_issue.outputs.issue_body }}"
           echo "Issue body: $issue_body"
 
-          OWNER=$(echo "$issue_body" | jq -r '.[].Owner' | head -n 1)
-          POLICY=$(echo "$issue_body" | jq -r '.[].Policy' | head -n 1)
-          RESOURCE=$(echo "$issue_body" | jq -r '.[].Resource' | head -n 1)
-          ACTIONS=$(echo "$issue_body" | jq -r '.[].Actions' | head -n 1)
+          # Extract each JSON object and add to an array
+          json_array=$(echo "$issue_body" | jq -s '[.[]]')
+
+          # Extract values using jq from the first object in the array
+          OWNER=$(echo "$json_array" | jq -r '.[0].Owner')
+          POLICY=$(echo "$json_array" | jq -r '.[0].Policy')
+          RESOURCE=$(echo "$json_array" | jq -r '.[0].Resource')
+          ACTIONS=$(echo "$json_array" | jq -r '.[0].Actions')
 
           echo "Extracted OWNER: $OWNER"
           echo "Extracted POLICY: $POLICY"
@@ -68,7 +66,7 @@ jobs:
       - name: Comment on the issue
         uses: peter-evans/create-or-update-comment@v1
         with:
-          issue-number: ${{ steps.extract_payload.outputs.issue_number }}
+          issue-url: ${{ steps.extract_payload.outputs.issue_url }}
           body: |
             @${{ steps.extract_details.outputs.owner }} A new issue has been created with the following details:
             - **Policy**: ${{ steps.extract_details.outputs.policy }}
