--- a/ui/backend/requirements.txt
+++ b/ui/backend/requirements.txt
@@ -1,3 +1,6 @@
+altair==4.2.2
+annotated-types==0.7.0
+anyio==4.4.0
 applicationinsights==0.11.10
 attrs==23.2.0
 azure-common==1.1.28
@@ -15,16 +18,29 @@ azure-mgmt-subscription==3.1.1
 azure-storage-blob==12.21.0
 azure-storage-file-datalake==12.16.0
 blinker==1.8.2
+cachetools==5.3.3
 certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 contourpy==1.2.1
-cryptography==43.0.0
+cryptography==42.0.7
 cycler==0.12.1
+dnspython==2.6.1
+email_validator==2.2.0
+entrypoints==0.4
+fastapi==0.111.1
+fastapi-cli==0.0.4
 Flask==3.0.3
+Flask-Cors==4.0.1
 fonttools==4.53.1
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
 idna==3.7
 isodate==0.6.1
 itsdangerous==2.2.0
@@ -33,8 +49,10 @@ joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.1
+mdurl==0.1.2
 msal==1.30.0
 msal-extensions==1.2.0
 msrest==0.7.1
@@ -42,28 +60,52 @@ numpy==2.0.1
 oauthlib==3.2.2
 packaging==24.1
 pandas==2.2.2
+patsy==0.5.6
 pillow==10.4.0
 portalocker==2.10.1
 prettytable==3.10.2
+protobuf==4.25.3
+pyarrow==16.1.0
 pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+Pygments==2.18.0
 PyJWT==2.8.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.1
 pywin32==306
 PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+rich==13.7.1
 rpds-py==0.19.0
 scikit-learn==1.5.1
 scipy==1.14.0
+shellingham==1.5.4
 six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+starlette==0.37.2
+statsmodels==0.14.2
+tabulate==0.9.0
+tenacity==8.3.0
 termcolor==2.4.0
 threadpoolctl==3.5.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+typer==0.12.3
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+uvicorn==0.30.3
+watchdog==4.0.1
+watchfiles==0.22.0
 wcwidth==0.2.13
 Werkzeug==3.0.3
