--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.13.0",
         "@emotion/styled": "^11.13.0",
+        "@mui/icons-material": "^5.16.6",
         "@mui/material": "^5.16.6",
         "axios": "^0.24.0",
         "chart.js": "^4.4.3",
