--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -10,6 +10,7 @@
         "axios": "^0.24.0",
         "chart.js": "^4.4.3",
         "cross-env": "^7.0.3",
+        "date-fns": "^3.6.0",
         "react": "^17.0.2",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^17.0.2",
