--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -15,6 +15,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
+        "react-virtuoso": "^4.9.0",
         "recharts": "^2.12.7",
         "socket.io-client": "^4.7.5",
         "typescript": "^4.4.4"
