--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -5,6 +5,13 @@
     "dependencies": {
         "@emotion/react": "^11.13.0",
         "@emotion/styled": "^11.13.0",
+        "@fluentui/react": "^8.120.2",
+        "@fluentui/react-card": "^9.0.88",
+        "@fluentui/react-hooks": "^8.8.11",
+        "@fluentui/theme": "^2.6.57",
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/icons-material": "^5.16.6",
         "@mui/material": "^5.16.6",
         "axios": "^0.24.0",
