fixed null value error and memory leak issue

--- a/ui/backend/policies/policies.yaml
+++ b/ui/backend/policies/policies.yaml
@@ -93,7 +93,7 @@ policies:
 - actions:
   - type: delete
   description: Delete unattached network interface cards
-  enabled: false
+  enabled: true
   exclusions: []
   filters:
   - type: unattached
