--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -14,6 +14,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/icons-material": "^5.16.6",
         "@mui/material": "^5.16.6",
+        "@mui/styles": "^5.16.6",
         "axios": "^0.24.0",
         "chart.js": "^4.4.3",
         "cross-env": "^7.0.3",
