--- a/ui/backend/policies/policies.yaml
+++ b/ui/backend/policies/policies.yaml
@@ -3,7 +3,7 @@ policies:
   - type: stop
   description: Stop VMs that have not been used in the last x days and have an average
     CPU below the set threshold, and have a specific tag(optional)
-  enabled: true
+  enabled: false
   filters:
   - days: 30
     threshold: 10
@@ -21,7 +21,7 @@ policies:
 - actions:
   - type: delete
   description: Delete unattached public IPs
-  enabled: true
+  enabled: false
   filters:
   - type: unattached
   name: delete-unattached-public-ips
@@ -93,7 +93,7 @@ policies:
 - actions:
   - type: delete
   description: Delete unattached network interface cards
-  enabled: true
+  enabled: false
   exclusions: []
   filters:
   - type: unattached
