--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -22,10 +22,12 @@
         "react": "^17.0.2",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^17.0.2",
+        "react-icons": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-virtuoso": "^4.9.0",
         "recharts": "^2.12.7",
         "socket.io-client": "^4.7.5",
+        "styled-components": "^6.1.12",
         "typescript": "^4.4.4"
     },
     "scripts": {
