--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.13.0",
         "@emotion/styled": "^11.13.0",
         "@fluentui/react": "^8.120.2",
@@ -14,14 +15,15 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/icons-material": "^5.16.6",
         "@mui/material": "^5.16.6",
-        "@mui/styles": "^5.16.6",
         "axios": "^0.24.0",
+        "chakra": "^0.0.3",
         "chart.js": "^4.4.3",
         "cross-env": "^7.0.3",
         "date-fns": "^3.6.0",
-        "react": "^17.0.2",
+        "framer-motion": "^4.1.17",
+        "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
-        "react-dom": "^17.0.2",
+        "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-virtuoso": "^4.9.0",
@@ -55,6 +57,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@types/react-dom": "^18.3.0"
     }
 }
