--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -25,12 +25,14 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
+        "react-markdown": "^9.0.1",
         "react-scripts": "4.0.3",
         "react-virtuoso": "^4.9.0",
         "recharts": "^2.12.7",
         "socket.io-client": "^4.7.5",
         "styled-components": "^6.1.12",
-        "typescript": "^4.4.4"
+        "typescript": "^4.4.4",
+        "vfile": "^6.0.2"
     },
     "scripts": {
         "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
