enhance ui elements

--- a/ui/backend/policies/policies.yaml
+++ b/ui/backend/policies/policies.yaml
@@ -96,12 +96,12 @@ policies:
   exclusions: []
   filters:
   - type: unattached
-  name: Unattached Network Interface Cards
+  name: delete-unattached-nics
   resource: azure.nic
 - actions:
   - type: downgrade_disks
   enabled: true
   filters:
   - type: stopped
-  name: DowngradeDisksOfStoppedVMs
+  name: downgrade-disks-of-stopped-vms
   resource: azure.vm
