--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@heroicons/react": "^2.1.5",
         "@mui/icons-material": "^5.16.6",
         "@mui/material": "^5.16.7",
         "axios": "^0.24.0",
@@ -32,6 +33,7 @@
         "socket.io-client": "^4.7.5",
         "styled-components": "^6.1.12",
         "typescript": "^4.4.4",
+        "ui": "github:shadcn/ui",
         "vfile": "^6.0.2"
     },
     "scripts": {
