--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -34,7 +34,8 @@
         "styled-components": "^6.1.12",
         "typescript": "^4.4.4",
         "ui": "github:shadcn/ui",
-        "vfile": "^6.0.2"
+        "vfile": "^6.0.2",
+        "yup": "^1.4.0"
     },
     "scripts": {
         "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
