--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -3,6 +3,8 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "@azure/msal-browser": "^2.22.1",
+        "@azure/msal-react": "^1.3.1",
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.13.0",
         "@emotion/styled": "^11.13.0",
@@ -23,6 +25,7 @@
         "date-fns": "^3.6.0",
         "framer-motion": "^4.1.17",
         "react": "^18.3.1",
+        "react-aad-msal": "^2.3.5",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
