--- a/ui/frontend/tsconfig.json
+++ b/ui/frontend/tsconfig.json
@@ -24,7 +24,6 @@
       "node_modules/@types"
     ]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
