--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -37,6 +37,7 @@
         "styled-components": "^6.1.12",
         "typescript": "^4.4.4",
         "ui": "github:shadcn/ui",
+        "uuid": "^10.0.0",
         "vfile": "^6.0.2",
         "yup": "^1.4.0"
     },
@@ -66,6 +67,7 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@types/react-dom": "^18.3.0"
+        "@types/react-dom": "^18.3.0",
+        "@types/uuid": "^10.0.0"
     }
 }
