--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -30,6 +30,7 @@
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-markdown": "^9.0.1",
+        "react-router-dom": "^6.26.1",
         "react-scripts": "4.0.3",
         "react-virtuoso": "^4.9.0",
         "recharts": "^2.12.7",
