--- a/ui/backend/requirements.txt
+++ b/ui/backend/requirements.txt
@@ -1,3 +1,6 @@
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.3
+aiosignal==1.3.1
 altair==4.2.2
 annotated-types==0.7.0
 anyio==4.4.0
@@ -6,6 +9,7 @@ attrs==23.2.0
 azure-common==1.1.28
 azure-core==1.30.2
 azure-identity==1.17.1
+azure-mgmt-advisor==9.0.0
 azure-mgmt-compute==31.0.0
 azure-mgmt-core==1.4.0
 azure-mgmt-costmanagement==4.0.1
@@ -15,6 +19,7 @@ azure-mgmt-resource==23.1.1
 azure-mgmt-sql==3.0.1
 azure-mgmt-storage==21.2.1
 azure-mgmt-subscription==3.1.1
+azure-monitor-query==1.4.0
 azure-storage-blob==12.21.0
 azure-storage-file-datalake==12.16.0
 blinker==1.8.2
@@ -27,37 +32,60 @@ colorama==0.4.6
 contourpy==1.2.1
 cryptography==42.0.7
 cycler==0.12.1
+dataclasses-json==0.6.7
+distro==1.9.0
 dnspython==2.6.1
 email_validator==2.2.0
 entrypoints==0.4
 fastapi==0.111.1
 fastapi-cli==0.0.4
+filelock==3.16.0
 Flask==3.0.3
 Flask-Cors==4.0.1
 fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.9.0
 gitdb==4.0.11
 GitPython==3.1.43
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+huggingface-hub==0.24.6
 idna==3.7
 isodate==0.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jiter==0.5.0
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-core==0.2.38
+langchain-openai==0.1.23
+langchain-text-splitters==0.2.4
+langchain-tools==0.1.34
+langsmith==0.1.111
+logging==0.4.9.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.22.0
 matplotlib==3.9.1
 mdurl==0.1.2
 msal==1.30.0
 msal-extensions==1.2.0
 msrest==0.7.1
-numpy==2.0.1
+multidict==6.0.5
+mypy-extensions==1.0.0
+numpy==2.1.1
 oauthlib==3.2.2
+openai==0.28.0
+orjson==3.10.7
 packaging==24.1
 pandas==2.2.2
 patsy==0.5.6
@@ -72,6 +100,8 @@ pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
 PyJWT==2.8.0
+pymssql==2.3.1
+pyodbc==5.1.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-decouple==3.8
@@ -81,26 +111,36 @@ pytz==2024.1
 pywin32==306
 PyYAML==6.0.1
 referencing==0.35.1
+regex==2024.7.24
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.19.0
+ruamel.yaml==0.17.40
+ruamel.yaml.clib==0.2.8
+safetensors==0.4.5
 scikit-learn==1.5.1
 scipy==1.14.0
 shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+SQLAlchemy==2.0.33
 starlette==0.37.2
 statsmodels==0.14.2
 tabulate==0.9.0
 tenacity==8.3.0
 termcolor==2.4.0
 threadpoolctl==3.5.0
+tiktoken==0.7.0
+tokenizers==0.19.1
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4
+tqdm==4.66.5
+transformers==4.44.2
 typer==0.12.3
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
@@ -109,3 +149,4 @@ watchdog==4.0.1
 watchfiles==0.22.0
 wcwidth==0.2.13
 Werkzeug==3.0.3
+yarl==1.9.11
