--- a/ui/backend/autogen/OAI_CONFIG_LIST.json
+++ b/ui/backend/autogen/OAI_CONFIG_LIST.json
@@ -5,9 +5,9 @@
     },
     {
         "model": "gpt-4o",
-        "api_key": "0baa3732307344248c83ebbcc10f0169",
-        "base_url": "https://oaioaipoc.openai.azure.com/openai/deployments/gpt-4o/chat/completions?api-version=2023-03-15-preview",
+        "api_key": "5060bfdd7cbf48789d6ab72e350dc40f",
+        "base_url": "https://aoai-jml.openai.azure.com/",
         "api_type": "azure",
-        "api_version": "2024-02-15-preview"
+        "api_version": "2023-03-15-preview"
     }
 ]
