--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -8,8 +8,9 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.13.0",
         "@emotion/styled": "^11.13.0",
-        "@fluentui/react": "^8.120.2",
+        "@fluentui/react": "^8.121.3",
         "@fluentui/react-card": "^9.0.88",
+        "@fluentui/react-components": "^9.55.0",
         "@fluentui/react-hooks": "^8.8.11",
         "@fluentui/theme": "^2.6.57",
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
