--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -30,17 +30,19 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
-        "react-markdown": "^9.0.1",
+        "react-markdown": "^8.0.7",
         "react-router-dom": "^6.26.1",
         "react-scripts": "4.0.3",
         "react-virtuoso": "^4.9.0",
         "recharts": "^2.12.7",
+        "remark": "^14.0.3",
+        "remark-html": "^16.0.1",
         "socket.io-client": "^4.7.5",
         "styled-components": "^6.1.12",
         "typescript": "^4.4.4",
         "ui": "github:shadcn/ui",
         "uuid": "^10.0.0",
-        "vfile": "^6.0.2",
+        "vfile": "^5.3.7",
         "yup": "^1.4.0"
     },
     "scripts": {
